# stunts-cartography

./: .gitignore  .hgignore  .hgtags  Animate.hs  Annotate.hs  AnnotationParser.hs  AnnotationTypes.hs  CHANGELOG.md  CYDONIA.TRK  CartoM.hs  Composition.hs  Interface.hs  LICENSE  LapTrace.hs  Main.hs  Output.hs  Palette.hs  Parameters.hs  Pics.hs  README.md  Replay.hs  Track.hs  Types.hs  Utils.hs  WINDOWS.txt  cabal.project  generate-movie.sh  run-test.sh  stack.yaml  stunts-cartography.cabal  test-build.sh
css/: help.css  viewer.css
data/: 1st_Akoss_Poo.rpl  234zdup.rpl  FONYOD.TRK  NEWTRACK.TRK  PALETTE.TRK  VISEGRAD.TRK  ZCT044.TRK  ZCT047.TRK  ZCT070.TRK  ZCT077.TRK  ZCT094.TRK  ZCT102.TRK  ZCT106.TRK  ZCT108.TRK  ZCT114.TRK  ZCT128.TRK  ZCT131.TRK  ZCT132.TRK  ZCT135.TRK  ZCT82.TRK  biggrid-test.txt  gan_dup.rpl
laptrace/: dosbox.conf  hackparser.hs  instructions.txt
laptrace-old/: video-notes.txt
repldump/: REPLDUMP.md  repldump.bat  repldump.conf  repldump.sh
repldump/src/: GameState.hs  Paths.hs  WriteCoords.hs
src/: Animate.hs  Annotation.hs  AnnotationParser.hs  BigGrid.hs  Composition.hs  Gallery.hs  Interface.hs  LapTrace.hs  MM.hs  Main.hs  OurByteString.hs  Output.hs  Parameters.hs  Paths.hs  Pics.hs  Replay.hs  Repldump.hs  Track.hs  Trackdata.hs  Utils.hs  Viewer.hs
src/Annotation/: CairoText.hs  Flipbook.hs  LapTrace.hs  Parser.hs
src/Annotation/LapTrace/: Vec.hs
src/Annotation/LapTrace/Legacy/: Animate.hs  LapTrace.hs
src/Annotation/LapTrace/Parser/: Simple.hs
src/Dump/: Common.hs  GameState.hs  Trackdata.hs  WriteCoords.hs
src/LapTrace/: Vec.hs
src/LapTrace/Legacy/: Animate.hs  LapTrace.hs
src/LapTrace/Parser/: Simple.hs
src/Misc/: Main.hs
src/Pics/: MM.hs  Palette.hs
src/Repldump/: GameState.hs
src/Types/: CartoM.hs  Diagrams.hs
src/Util/: ByteString.hs  Misc.hs  SVGFonts.hs  Threepenny.hs  Zip.hs  ZipConduit.hs  ZipStreams.hs
src/Util/Diagrams/: Backend.hs
src/Util/Diagrams/Backend/: Cairo.hs  Common.hs  Rasterific.hs  SVG.hs
src/Util/Reactive/: Threepenny.hs
src/Util/Threepenny/: Alertify.hs  Flexbox.hs  JQueryAutocomplete.hs
src/Widgets/: BoundedInput.hs  FilePathPicker.hs
windows/: build-notes.md
windows/freeze/: cabal.project.freeze.1.0.0.0  cabal.project.freeze.1.1.0.0
windows/skeleton/: SKELETON.txt  stcarto.bat
windows/skeleton/app/: placeholder.txt
windows/skeleton/lib/: placeholder.txt
windows/skeleton/lib/licenses/: placeholder.txt
wwwroot/: annotations-help.html  index.html
wwwroot/css/: help.css  viewer.css
wwwroot/css/jquery-ui/: jquery-ui.min.css
wwwroot/css/jquery-ui-autocomplete/ui-lightness/: jquery-ui-1.10.4.custom.min.css
wwwroot/lib/jquery-ui/: jquery-ui.min.js
