Name:                stunts-cartography
Version:             0.4.0.1
Synopsis:            Power tools for creating Stunts track maps. Built on Diagrams and Threepenny.
Description:         Power tools for creating Stunts track maps. Built on Diagrams and Threepenny.
Category:            Game, Graphics
License:             BSD3
License-file:        LICENSE
Author:              Daniel Mlot
Maintainer:          Daniel Mlot
Build-Type:          Simple
Cabal-Version:       >=1.8
Extra-Source-Files:  README.md
Data-Dir:            .
Data-Files:          wwwroot/css/*.css
                     wwwroot/css/alertify.core.css
                     wwwroot/css/alertify.default.css
                     wwwroot/*.html
                     wwwroot/images/*.png
                     wwwroot/lib/alertify.min.js
                     wwwroot/lib/README-alertify.md
                     wwwroot/lib/jquery-ui-autocomplete/jquery-ui-1.10.4.custom.min.js
                     wwwroot/lib/jquery-ui-autocomplete/MIT-LICENSE.txt
                     wwwroot/css/jquery-ui-autocomplete/ui-lightness/jquery-ui-1.10.4.custom.min.css
                     wwwroot/css/jquery-ui-autocomplete/ui-lightness/images/*.gif
                     wwwroot/css/jquery-ui-autocomplete/ui-lightness/images/*.png

flag resourcesWithExecutables
    description: Retrieve resources (i.e. files listed under Data-Files in the
                 cabal file) from corresponding directories at the location of
                 the stunts-cartography executables.
    default:     False

flag repldump2carto
    description: Builds the repldump2carto utility.
    default:     False

Source-Repository head
  type: hg
  location: https://bitbucket.org/duplode/stunts-cartography


Executable sc-trk-viewer
  Main-is:           Viewer.hs
  Other-Modules:     Composition
                    ,Util.ByteString
                    ,Output
                    ,Pics.Palette
                    ,Parameters
                    ,Pics
                    ,Track
                    ,Util.Misc
                    ,Util.ByteString
                    ,Util.ZipConduit
                    ,Util.Reactive.Threepenny
                    ,Util.Threepenny.Alertify
                    ,Widgets.BoundedInput
                    ,Replay
                    ,Types.Diagrams
                    ,Types.CartoM
                    ,Annotation
                    ,Annotation.Parser
                    ,Annotation.Flipbook
                    ,Annotation.LapTrace
                    ,Annotation.LapTrace.Vec
                    ,Annotation.LapTrace.Parser.Simple
                    ,Pics.MM
                    ,Paths


  if flag (resourcesWithExecutables)
    CPP-Options:      -DCABAL -DRESOURCES_WITH_EXECUTABLES
  else
    CPP-Options:      -DCABAL
  Hs-Source-Dirs:   src

  Build-Depends:     base >= 4.6 && < 5
                    ,threepenny-gui == 0.4.*
                    ,diagrams-core == 1.0.*
                    ,diagrams-lib == 1.0.*
                    ,diagrams-cairo == 1.0.*
                    ,parsec >= 3.1.3 && < 3.2
                    ,parsec-permutation == 0.1.*
                    ,zip-conduit == 0.2.*
                    ,lens
                    ,conduit
                    ,json
                    ,colour
                    ,data-default
                    ,containers
                    ,bytestring
                    ,array
                    ,mtl
                    ,directory
                    ,filepath
                    ,temporary

Executable repldump2carto
  Hs-Source-Dirs:    repldump/src
  Main-is:           WriteCoords.hs
  Other-Modules:     GameState

  if flag (repldump2carto)
    Build-Depends:   base >= 4.6 && < 5
                    ,bytestring
                    ,text
                    ,binary
                    ,directory
                    ,filepath
  else
    Buildable:       False
