Cabal-Version:       2.4
Name:                stunts-cartography
Version:             1.0.0.0
Synopsis:            Power tools for creating Stunts track maps.
Description:         Power tools for creating Stunts track maps.
Category:            Game, Graphics
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Daniel Mlot
Extra-Source-Files:  README.md
Data-Dir:            .
Data-Files:          wwwroot/css/*.css
                     wwwroot/css/alertify.core.css
                     wwwroot/css/alertify.default.css
                     wwwroot/*.html
                     wwwroot/favicon*
                     wwwroot/images/*.png
                     wwwroot/lib/alertify.min.js
                     wwwroot/lib/README-alertify.md
                     wwwroot/lib/jquery-ui/jquery-ui.min.js
                     wwwroot/lib/jquery-ui/LICENSE.txt
                     wwwroot/css/jquery-ui/jquery-ui.min.css
                     wwwroot/css/jquery-ui/images/*.png
                     wwwroot/css/jquery-ui/jquery-ui.icon-font.min.css
                     wwwroot/css/jquery-ui/font/*
                     wwwroot/css/jquery-ui/README-jquery-ui-iconfont.md

flag resourcesWithExecutables
    description: Retrieve resources (i.e. files listed under Data-Files in the
                 cabal file) from corresponding directories at the location of
                 the stunts-cartography executables.
    default:     False

flag cairo
    description: Use the diagrams-cairo backend.
    default:     True
    manual:      True

flag svg
    description: Use the diagrams-svg backend.
    default:     False
    manual:      True

flag rasterific
    description: Use the diagrams-rasterific backend.
    default:     False
    manual:      True

Source-Repository head
  type: git
  location: https://github.com/duplode/stunts-cartography

Executable stcarto
  Default-Language:  Haskell2010
  Main-is:           Main.hs
  Other-Modules:     Viewer
                    ,Composition
                    ,Output
                    ,Parameters
                    ,Types.CartoM
                    ,Pics.Palette
                    ,Pics
                    ,Pics.MM
                    ,Annotation
                    ,Annotation.Parser
                    ,Annotation.Flipbook
                    ,Annotation.LapTrace
                    ,Annotation.LapTrace.Vec
                    ,Annotation.LapTrace.Parser.Simple
                    ,Track
                    ,Replay
                    ,Widgets.BoundedInput
                    ,Widgets.FilePathPicker
                    ,Util.Misc
                    ,Util.Zip
                    ,Util.Reactive.Threepenny
                    ,Util.Threepenny
                    ,Util.Threepenny.Alertify
                    ,Util.Threepenny.JQueryAutocomplete
                    ,Util.Threepenny.Flexbox
                    ,Util.SVGFonts
                    ,Util.Diagrams.Backend
                    ,Util.Diagrams.Backend.Common
                    ,Dump.Common
                    ,Dump.WriteCoords
                    ,Dump.GameState
                    ,Dump.Trackdata
                    ,Repldump
                    ,Trackdata
                    ,BigGrid
                    ,Paths
                    ,Paths_stunts_cartography

  Hs-Source-Dirs:   src

  Build-Depends:     base >= 4.9 && < 5
                    ,threepenny-gui >= 0.8
                    ,threepenny-gui-flexbox >= 0.4
                    ,diagrams-core >= 1.4 && < 1.6
                    ,diagrams-lib >= 1.4.4 && < 1.5
                    ,SVGFonts >= 1.8 && < 1.9
                    ,parsec >= 3.1.3 && < 3.2
                    ,parsec-permutation == 0.1.*
                    ,zip >= 1.0
                    ,lens
                    ,aeson
                    ,colour
                    ,data-default-class
                    ,containers
                    ,text
                    ,bytestring
                    ,array
                    ,mtl >= 2.2.1
                    ,directory >= 1.2.7
                    ,filepath
                    ,temporary
                    ,template-haskell
                    ,cereal
                    ,th-lift-instances
                    ,zlib
                    ,extra >= 1.7.9
                    ,clay >= 0.13
                    ,optparse-applicative >= 0.16
                    ,binary

  GHC-Options:        -threaded
  CPP-Options:        -DCABAL
  if flag (resourcesWithExecutables)
    CPP-Options:      -DRESOURCES_WITH_EXECUTABLES
  if flag (svg)
    Other-Modules:    Util.Diagrams.Backend.SVG
    Build-Depends:    diagrams-svg >= 1.4.3 && < 1.5
    CPP-Options:      -DSVG_BACKEND
  elif flag (rasterific)
    Other-Modules:    Util.Diagrams.Backend.Rasterific
    Build-Depends:    diagrams-rasterific >= 1.4.2.1 && < 1.5
    CPP-Options:      -DRASTERIFIC_BACKEND
  elif flag (cairo)
    Other-Modules:    Util.Diagrams.Backend.Cairo
    Build-Depends:    diagrams-cairo >= 1.4.2 && < 1.5
    CPP-Options:      -DCAIRO_BACKEND
  else
    Build-Depends:    invalid-cabal-flag-settings < 0
